--- a/code/R/seurat/visualization_vignette.Rmd
+++ b/code/R/seurat/visualization_vignette.Rmd
@@ -49,6 +49,7 @@ library(Seurat)
 library(SeuratData)
 library(ggplot2)
 library(patchwork)
+#InstallData("pbmc3k", force.reinstall=F)
 data("pbmc3k.final")
 pbmc3k.final$groups <- sample(c('group1', 'group2'), size = ncol(pbmc3k.final), replace = TRUE)
 features <- c("LYZ", "CCL5", "IL32", "PTPRCAP", "FCGR3A", "PF4")
